# cheatbox

./: README.md  pyproject.toml
cheatbox/: data.py  display.py  main.py
data/: docker.yaml  firefox.yaml  linux.yaml  tc.yaml  various.yaml  vscode.yaml
